src/objects/npsp__Grant_Deadline__c.object
<CustomObject>
    <description>A custom object for tracking various grant/gift seeking deliverables such as the LOI delivery date, application date, and report due dates.</description>
    <fields>
        <fullName>npsp__Grant_Deadline_Due_Date__c</fullName>
        <description>The date on which this particular Deliverable is due.</description>
        <inlineHelpText>The date on which this particular Deliverable is due.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Deliverable_Close_Date__c</fullName>
        <description>The date on which the deliverable was actually submitted.</description>
        <inlineHelpText>The date on which the deliverable was actually submitted.</inlineHelpText>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Grant_Deliverable_Requirements__c</fullName>
        <description>Description of what is required for this deliverable.</description>
        <inlineHelpText>Description of what is required for this deliverable.</inlineHelpText>
        <label>Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Opportunity__c</fullName>
        <description>Master-Detail relationship that determines which Opportunity this Deliverable is related to.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Deliverables</relationshipLabel>
        <relationshipName>Grant_Deadlines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npsp__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LOI</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Interim Report</fullName>
                </value>
                <value>
                    <fullName>Final Report</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deliverable</label>
    <nameField>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>